<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreatePostContents">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backPageButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/backPageButton"
                android:textColor="@color/black" />

            <View
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <Button
                android:id="@+id/deletePostButton"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/deletePostButton"
                android:textColor="@color/black"
                android:visibility="gone"/>

            <Button
                android:id="@+id/updatePostButton"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/editPostButton"
                android:textColor="@color/black"
                android:visibility="gone"/>

            <Button
                android:id="@+id/uploadPostButton"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/uploadPostButton"
                android:textColor="@color/black"
                android:visibility="gone"/>

        </LinearLayout>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_weight="1"
                        android:text="@string/travelPlace"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/likesButton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="0"
                        android:background="@android:color/transparent"
                        android:src="@drawable/likes_off_button_image"
                        android:textOff=""
                        android:textOn="" />

                </LinearLayout>

                <TextView
                    android:id="@+id/authorNicknameView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="12sp" />


                <!--postData 정보를 가져옴. layout_height은 가져오는 정보만큼 설정됨.-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/postData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:listitem="@layout/activity_post_contents_item"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>