<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="8dp"
            android:background="@color/dodgerBlue" />

        <TextView
            android:id="@+id/courseTitle"
            android:layout_width="185dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:text="@string/dayText"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/placeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/placeEachFromCourse"
            android:textSize="14sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/placeId"
            android:layout_width="290dp"
            android:layout_height="290dp"
            android:layout_gravity="center"
            android:background="@color/aliceBlue"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="fill_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/aliceBlue"
                    android:columnCount="1"
                    android:orientation="vertical"
                    android:rowCount="3">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/pictures"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <!-- 사진 추가 버튼 -->
                        <Button
                            android:id="@+id/addPictureButton"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:backgroundTint="@color/white"
                            android:hint="@string/addPictureHint"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:visibility="gone"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/imageList"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/addPictureButton"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:listitem="@layout/activity_post_contents_image">

                        </androidx.recyclerview.widget.RecyclerView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </GridLayout>

            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/aliceBlue"
            android:gravity="start|top"
            android:hint="@string/writeContextHint"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/content2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/aliceBlue"
            android:gravity="start|top"
            android:minLines="3" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>